--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,10 @@ jobs:
       fail-fast: false
       matrix:
         runner:
-          - ubuntu-latest
+          - ubuntu-24.04
           - ubuntu-24.04-arm
-          - macos-latest
-          - macos-13
+          - macos-15
+          - macos-15-intel
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Checkout
