--- a/ws-release/.github/workflows/release.yml
+++ b/ws-release/.github/workflows/release.yml
@@ -9,7 +9,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runner: [ubuntu-24.04, ubuntu-24.04-arm, macos-15, macos-15-intel]
+        runner:
+          - ubuntu-24.04
+          - ubuntu-24.04-arm
+          - macos-15
+          - macos-15-intel
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Checkout
