--- a/ws-release/.github/workflows/release.yml
+++ b/ws-release/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
 
   upload-assets:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: write
     steps:
