--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
     "*.go": "${capture}_test.go",
     "go.mod": "go.sum"
   },
+  "gopls": {
+    "build.buildFlags": ["-tags=integration"]
+  },
   "go.lintTool": "golangci-lint-v2",
   "go.lintFlags": [
     "--path-mode=abs",
