--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,6 +1,10 @@
 # This configuration file based on https://github.com/maratori/golangci-lint-config
 version: "2"
 
+run:
+  build-tags:
+    - integration
+
 issues:
   # Maximum count of issues with the same text.
   max-same-issues: 50
