--- a/.github/release-please/config.json
+++ b/.github/release-please/config.json
@@ -5,6 +5,7 @@
   "include-component-in-tag": false,
   "include-v-in-tag": true,
   "draft": true,
+  "force-tag-creation": true,
   "packages": {
     ".": {}
   }
