--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,8 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - "v*"
+  release:
+    types: [created]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.repository }}
@@ -11,6 +10,7 @@ concurrency:
 
 jobs:
   build:
+    if: startsWith(github.event.release.tag_name, 'v')
     strategy:
       fail-fast: false
       matrix:
@@ -27,6 +27,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          ref: ${{ github.event.release.target_commitish }}
 
       - name: Setup Nix
         uses: DeterminateSystems/determinate-nix-action@89ab342bd48ff7318caf8d39d6a330c7b1df8f2f # v3.15.2
@@ -63,7 +65,8 @@ jobs:
 
       - name: Create release archives and upload
         run: |
-          VERSION=${GITHUB_REF_NAME#v}
+          TAG_NAME="${{ github.event.release.tag_name }}"
+          VERSION=${TAG_NAME#v}
 
           # Create archives from each platform's binary
           for artifact_dir in dist-*; do
@@ -88,7 +91,7 @@ jobs:
           sha256sum *.tar.gz > checksums.txt
 
           # Upload assets to the existing draft release and publish it
-          gh release upload "$GITHUB_REF_NAME" *.tar.gz checksums.txt
-          gh release edit "$GITHUB_REF_NAME" --draft=false
+          gh release upload "$TAG_NAME" *.tar.gz checksums.txt
+          gh release edit "$TAG_NAME" --draft=false
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
